setup port, created home.html, added routes.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "friend-finder",
   "version": "1.0.0",
   "description": "This is a compatibility-based friend finder application- basically a dating app.",
-  "main": "index.js",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/anand92490/friend-finder/issues"
   },
-  "homepage": "https://github.com/anand92490/friend-finder#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "homepage": "https://github.com/anand92490/friend-finder#readme"
 }
